// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exposes the effects from forked sagas in the promise result 1`] = `
Object {
  "call": Array [
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "args": Array [
          42,
        ],
        "context": null,
        "fn": "@@redux-saga-test-plan/json/function/identity",
      },
      "type": "CALL",
    },
  ],
  "fork": Array [
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "args": Array [],
        "context": null,
        "fn": "@@redux-saga-test-plan/json/function/backgroundSaga",
      },
      "type": "FORK",
    },
  ],
  "put": Array [
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "action": Object {
          "type": "FOO",
        },
        "channel": undefined,
      },
      "type": "PUT",
    },
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "action": Object {
          "payload": "world",
          "type": "BAR",
        },
        "channel": undefined,
      },
      "type": "PUT",
    },
  ],
  "take": Array [
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "pattern": "HELLO",
      },
      "type": "TAKE",
    },
  ],
}
`;

exports[`exposes the effects in the promise result 1`] = `
Object {
  "call": Array [
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "args": Array [
          42,
        ],
        "context": null,
        "fn": "@@redux-saga-test-plan/json/function/identity",
      },
      "type": "CALL",
    },
  ],
  "put": Array [
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "action": Object {
          "type": "FOO",
        },
        "channel": undefined,
      },
      "type": "PUT",
    },
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "action": Object {
          "payload": "hello",
          "type": "BAR",
        },
        "channel": undefined,
      },
      "type": "PUT",
    },
  ],
}
`;

exports[`test coverage for snapshot testing call of anonymous function 1`] = `
Object {
  "call": Array [
    Object {
      "@@redux-saga/IO": true,
      "combinator": false,
      "payload": Object {
        "args": Array [],
        "context": null,
        "fn": "@@redux-saga-test-plan/json/function/<anonymous>",
      },
      "type": "CALL",
    },
  ],
}
`;
